chore: update to open api spec
