# verify_api/main.py
@@ -11,7 +11,10 @@ from biosimulator_processes.data_model.compare_data_model import (
     ProcessComparisonResult,
     ODEComparisonResult
 )
-from verify_api.data_model import ODEComparison, AvailableProcesses
+from verify_api.data_model import (
+    ODEComparison,
+    AvailableProcesses,
+    ProcessRegistrationData)
 from verify_api.src.comparison import ode_comparison, process_comparison
 
 
@@ -62,6 +65,7 @@ async def root():
         404: {"description": "Unable to get the available processes."}})
 def get_available_processes() -> AvailableProcesses:
     processes = list(CORE.process_registry.registry.keys())
+    registration_data = [ProcessRegistrationData(reg_id=p) for p in processes]
     return AvailableProcesses(names=processes)
 
 
